# GeekBrains

01-CppBasics/03-Lesson/: 03Lesson_02.cpp  03Lesson_03.cpp  03Lesson_04.cpp  03Lesson_1.cpp  hello.ii  hello.s  main.ii  main.s  trial.cpp
01-CppBasics/04-Lesson/: 04Lesson_01.cpp  04Lesson_02.cpp  04Lesson_03.cpp  04Lesson_04.cpp  04Lesson_05.cpp
01-CppBasics/05-Lesson/: 05Lesson_01.cpp  05Lesson_02.cpp  05Lesson_03.cpp  05Lesson_04.cpp  05Lesson_05.cpp  a.out  main.c  passing.cpp  utils.cpp
01-CppBasics/06-Lesson/: 06Lesson_01.cpp  06Lesson_02.cpp  06Lesson_03.cpp  06Lesson_04.cpp  text.txt
01-CppBasics/07-Lesson/: 02_task.cpp  03_task.cpp  04_task.cpp
01-CppBasics/07-Lesson/01_task/: CMakeLists.txt  main
01-CppBasics/07-Lesson/01_task/apps/: main.cpp  mylib.cpp
01-CppBasics/07-Lesson/01_task/include/: mylib.h
01-CppBasics/Cross_Zeros/: main.cpp
